# food-ai

./: .env.example  .gitignore  README.md  pyproject.toml
.agent-skills/kg-explorer/: README.md
agents/: demo_kg_agent.py  kg_agent_query.py  kg_refiner_agent.py  kg_reviewer_agent.py  models.py  orchestrator.py  sdk_minimal_probe.py  sdk_runtime.py
config/: refinement.yaml
data/evaluation/: clean120_agent_results.json  clean120_benchmark.json  clean120_raw_abstract_baseline.json  clean120_retrieval_claim_vectors.json  experiment_tables.md  independent_questions_v1.csv  independent_questions_v1_agent_results.json  independent_questions_v1_benchmark.json  independent_questions_v1_review_summary.json  independent_questions_v1_review_summary.md
data/processed/: selected_850_quality_llm_abstract_complete_2026-04-26.json
food_ai/: __init__.py  batch_review.py  build_quality.py  embedding_client.py  enhanced_extractor_v3.py  entity_validator.py  llm_client.py  ncbi_client.py  paper_quality.py  pmc_fetcher.py  prompts.py  pydantic_ai_client.py  quality_assessment.py  refine_candidates.py  schema.py  sjr_loader.py
scripts/: README.md  auto_annotate.py  build_claim_embeddings_v3.py  expand_pubmed_corpus.py  fetch_pubmed_data.py  filter_relevance.py  render_kg_pyvis.py  review_extraction_batch.py  review_extraction_delta.py  run_extraction_v3.py  select_pubmed_expansion_with_llm.py  test_external_dependencies.py  test_pubmed_rate.py
tests/: __init__.py  test_build_quality.py  test_extraction_pipeline.py  test_modify_graph_tools.py  test_smoke_tools.py
(+42 files in other folders)
