[project]
name = "food-ai"
version = "0.1.0"
description = "Food AI Knowledge Graph Extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "pyvis>=0.3.2",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pydantic-ai>=1.77.0",
    "claude-agent-sdk>=0.2.87",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["food_ai"]
